[project]
name = "art-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpipe-art>=0.5.0",
    "skypilot[cudo,do,fluidstack,gcp,lambda,paperspace,runpod]==0.9.3",
]

[tool.uv]
required-version = ">=0.6.15"
dev-dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openpipe>=4.49.0",
    "hatch>=1.14.1",
    "ruff>=0.12.1",
    "pytest>=8.4.1",
    "nbval>=0.11.0",
    "pytest-xdist>=3.8.0",
    "pyright[nodejs]>=1.1.403",
    "pytest-asyncio>=1.1.0",
]